--- a/public/src/my-app.html
+++ b/public/src/my-app.html
@@ -10,7 +10,12 @@
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="my-icons.html">
+
+
+ <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
+    <script>var config={apiKey:"AIzaSyBHvgsIFt0NQMTVn0Z8Zc_8vZcPAauejrc",authDomain:"emmawalterwedding.firebaseapp.com",databaseURL:"https://emmawalterwedding.firebaseio.com",storageBucket:"emmawalterwedding.appspot.com",messagingSenderId:"797809225052"},fb=firebase.initializeApp(config);</script>
 
 </head><body><dom-module id="my-app">
   <template>
@@ -56,7 +61,8 @@
       <app-drawer id="drawer">
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="view1" href="/view1">Lista Nozze</a>
+          <a name="view1" href="/view1">Test Area</a>
+          <a name="view3" href="/view3">Lista Nozze</a>
           <a name="view2" href="/view2">Dove</a>
           <a name="view3" href="/view3">RSVP</a>
         </iron-selector>
@@ -68,7 +74,9 @@
         <app-header condenses="" reveals="" effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="my-icons:menu" drawer-toggle=""></paper-icon-button>
-            <div main-title="">Emma and Walter Wedding Site</div>
+            <div main-title="">Emma &amp; Walter Wedding Site</div>
+            <img src="../images/italy_flag.ico" width="40px">
+            <img src="../images/united_kingdom_flag.ico" width="40px">
           </app-toolbar>
         </app-header>
 
