--- a/public/src/my-view1.html
+++ b/public/src/my-view1.html
@@ -12,13 +12,12 @@
     </style>
 
     <div class="card">
-      <div class="circle">1</div>
-      <h1>View One</h1>
-      <p>Ut labores minimum atomorum pro. Laudem tibique ut has.</p>
-      <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
+      <h1>Walter's Test Area</h1>
+
+      <paper-button raised="" id="dbTest" on-tap="dbTest">DB TRY</paper-button>
     </div>
   </template>
 
-  <script>Polymer({is:"my-view1"});</script>
+  <script>Polymer({is:"my-view1",dbTest:function(){var a=fb.database(),i="walter.miani@gmail.com",e=i;fb.auth().signInWithEmailAndPassword(i,e).catch(function(a){a.code,a.message}),a.ref().child("test/").push("prova")}});</script>
 </dom-module>
 </body></html>
