--- a/src/my-app.html
+++ b/src/my-app.html
@@ -41,7 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
     <style>
       :host {
-        --app-primary-color: purple;
+        --app-primary-color: #4c1c24;
         --app-secondary-color: black;
 
         display: block;
