--- a/src/my-app.html
+++ b/src/my-app.html
@@ -74,6 +74,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
+   
+
     <app-location route="{{route}}"></app-location>
     <app-route
         route="{{route}}"
@@ -87,9 +89,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="view1" href="/view1">Test Area</a>
-          <a name="view3" href="/view3">Lista Nozze</a>
           <a name="invitati" href="/invitati">Invitati</a>
-          <a name="view3" href="/view3">RSVP</a>
+          <a name="rsvp" href="/rsvp">RSVP</a>
         </iron-selector>
       </app-drawer>
 
@@ -100,6 +101,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <app-toolbar>
             <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
             <div main-title>Emma &amp Walter Wedding Site</div>
+            <div on-tap="prova">asd</div>
             <img src="../images/italy_flag.ico" width="40px">
             <img src="../images/united_kingdom_flag.ico" width="40px">
           </app-toolbar>
@@ -111,8 +113,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             fallback-selection="view404"
             role="main">
           <my-view1 name="view1"></my-view1>
-          <my-invitati name="invitati"></my-invitati>
-          <my-view3 name="view3"></my-view3>
+          <my-invitati name="invitati" invitati="{{invitati}}"></my-invitati>
+          <my-rsvp name="rsvp" invitati="{{invitati}}"></my-rsvp>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
@@ -129,6 +131,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           reflectToAttribute: true,
           observer: '_pageChanged',
         },
+
+        invitati: {type: Array}
       },
 
       observers: [
@@ -152,6 +156,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _showPage404: function() {
         this.page = 'view404';
       },
+
+      prova: function(){
+        console.log(this.invitati);
+      }
     });
   </script>
 </dom-module>
