--- a/src/my-app.html
+++ b/src/my-app.html
@@ -21,6 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
 <script src="../bower_components/moment/moment.js"></script>
 <link rel="import" href="my-icons.html">
 
@@ -72,9 +73,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color: black;
         font-weight: bold;
       }
+
+      .langBtn:hover{
+        cursor: pointer;
+      }
     </style>
 
-   
+    <iron-ajax auto url="./lingua.json" handle-as="json" last-response="{{lingua}}"></iron-ajax>
 
     <app-location route="{{route}}"></app-location>
     <app-route
@@ -88,9 +93,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <app-drawer id="drawer">
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="view1" href="/view1">Test Area</a>
-          <a name="invitati" href="/invitati">Invitati</a>
+          <!--<a name="view1" href="/view1">Test Area</a>-->
+          <a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>
           <a name="rsvp" href="/rsvp">RSVP</a>
+          <a name="" href="" id="dove">{{calcString("dove", langPath, lingua)}}</a>
+          <a name="" href="">{{calcString("quando", langPath, lingua)}}</a>
+          <a name="" href="" on-tap="prova">Test</a>
         </iron-selector>
       </app-drawer>
 
@@ -101,9 +109,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <app-toolbar>
             <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
             <div main-title>Emma &amp Walter Wedding Site</div>
-            <div on-tap="prova">asd</div>
-            <img src="../images/italy_flag.ico" width="40px">
-            <img src="../images/united_kingdom_flag.ico" width="40px">
+            <img class="langBtn" on-tap="toIta" src="../images/italy_flag.ico" width="40px">
+            <img class="langBtn" on-tap="toEng" src="../images/united_kingdom_flag.ico" width="40px">
           </app-toolbar>
         </app-header>
 
@@ -113,8 +120,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             fallback-selection="view404"
             role="main">
           <my-view1 name="view1"></my-view1>
-          <my-invitati name="invitati" invitati="{{invitati}}"></my-invitati>
-          <my-rsvp name="rsvp" invitati="{{invitati}}"></my-rsvp>
+          <my-invitati name="invitati" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}"></my-invitati>
+          <my-rsvp name="rsvp" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}"></my-rsvp>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
@@ -132,7 +139,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           observer: '_pageChanged',
         },
 
-        invitati: {type: Array}
+        invitati: {type: Array},
+
+        langPath:{value:"ita"}
+
       },
 
       observers: [
@@ -157,8 +167,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         this.page = 'view404';
       },
 
+      toIta: function(){
+          this.langPath= "ita";
+      },
+
+      toEng: function(){
+          this.langPath= "eng";
+      },
+
       prova: function(){
-        console.log(this.invitati);
+        console.log(this.lingua);
+      },
+
+      calcString: function(campo, path, lingua){
+
+        return this.lingua[path][campo];
       }
     });
   </script>
