--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -18,13 +18,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: block;
 
         padding: 10px;
+        
+      }
+
+      h1, h2, h3, #text{
+        text-align: center;
       }
     </style>
 
     <div class="card">
-      <h1>Walter's Test Area</h1>
+      <h1>Emma &amp Walter</h1>
+      <h2>23rd September, 2017</h2>
+      <h2>Trivignano Udinese (UD), Italia</h2>
 
-      <paper-button raised id="dbTest" on-tap="dbTest">DB TRY</paper-button>
+      <div id="text"> 
+“We are so grateful to have you all in our lives. Thank you for your love, friendship and support. 
+We are so excited about sharing our big day with you” – E&ampW</div>
     </div>
   </template>
 
