--- a/src/my-app.html
+++ b/src/my-app.html
@@ -138,8 +138,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             fallback-selection="view404"
             role="main">
           <my-view1 name="view1"></my-view1>
-          <my-invitati name="invitati" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}"></my-invitati>
-          <my-rsvp name="rsvp" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}"></my-rsvp>
+          <my-invitati name="invitati" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}" ></my-invitati>
+          <my-rsvp name="rsvp" invitati="{{invitati}}" lingua="{{lingua}}" lang-path="{{langPath}}" status-known="{{statusKnown}}" nome="{{nome}}"></my-rsvp>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
@@ -163,7 +163,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      invitati="{{invitati}}"
      lingua="{{lingua}}"
      lang-path="{{langPath}}"
-     status-known="{{statusKnown}}"></my-login>
+     status-known="{{statusKnown}}"
+     nome="{{nome}}"></my-login>
 
 
 
@@ -220,7 +221,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
 
       prova: function(){
-        console.log(this.lingua);
+        console.log("observer da padre");
       },
 
       calcString: function(campo, path, lingua){
@@ -229,8 +230,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
 
       loginToggle: function(){
-        // this.$.loginDialog.open();
-        console.log(this.statusKnown);
         this.$.login.openDialog();
       }
     });
